force-app/main/default/objects/OtherVAT__c/OtherVAT__c.object-meta.xml
<CustomObject>
    <label>Other+Vat</label>
    <nameField>
        <displayFormat>OTV-{000000}</displayFormat>
        <label>OTHER+VAT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other+Vat</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>