force-app/main/default/objects/OtherVAT__c/fields/AmountOtherCostInclTaxFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountOtherCostInclTaxFormu__c</fullName>
    <formula>OtherRevenueCostID__r.AmountOtherCostIncludeTax__c</formula>
    <label>AMOUNT OTHER COST INCL TAX-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>