force-app/main/default/objects/OtherVAT__c/fields/AmountOtherRevIncTaxFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountOtherRevIncTaxFormu__c</fullName>
    <formula>OtherRevenueCostID__r.AmountOtherRevenueIncludeTax__c</formula>
    <label>AMOUNT OTHER REV INCL TAX-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>