force-app/main/default/objects/OtherVAT__c/fields/AmountTaxOtherCostFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxOtherCostFormu__c</fullName>
    <formula>OtherRevenueCostID__r.AmountOfTaxOtherCost__c</formula>
    <label>AMOUNT OF TAX-OTHER COST-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>