force-app/main/default/objects/OtherVAT__c/fields/AmountTaxOtherCostVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxOtherCostVAT__c</fullName>
    <label>AMOUNT OF TAX-OTHER COST-VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>