force-app/main/default/objects/OtherVAT__c/fields/AmountTaxOtherRevVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxOtherRevVAT__c</fullName>
    <label>AMOUNT OF TAX-OTHER REV-VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>