force-app/main/default/objects/OtherVAT__c/fields/OtherRevenueCostID__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenueCostID__c</fullName>
    <label>OTHER REVENUE &amp; COST ID</label>
    <referenceTo>OtherRevenueCost__c</referenceTo>
    <relationshipLabel>OTHER+VAT</relationshipLabel>
    <relationshipName>OtherVAT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>