force-app/main/default/objects/OtherVAT__c/fields/TotalAmountOtherCostFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOtherCostFormu__c</fullName>
    <formula>OtherRevenueCostID__r.TotalAmountOfOtherCost__c</formula>
    <label>TOTAL AMOUNT OF OTH COST-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>