force-app/main/default/objects/OtherVAT__c/fields/TotalAmountOtherRevFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOtherRevFormu__c</fullName>
    <formula>OtherRevenueCostID__r.TotalAmountOfOtherRevenue__c</formula>
    <label>TOTAL AMOUNT OF OTH REV-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>