force-app/main/default/objects/OtherVAT__c/fields/TotalAmountOtherRevVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOtherRevVAT__c</fullName>
    <label>TOTAL AMOUNT OF OTH REV-VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>