force-app/main/default/objects/OtherVAT__c/fields/TRX_PLAN_LOOKUP__c.field-meta.xml
<CustomField>
    <fullName>TRX_PLAN_LOOKUP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRX PLAN LOOKUP</label>
    <referenceTo>PaymentRequest__c</referenceTo>
    <relationshipLabel>OTHER+VAT</relationshipLabel>
    <relationshipName>OTHER_VAT</relationshipName>
    <type>Lookup</type>
</CustomField>