force-app/main/default/objects/OtherVAT__c/fields/UnpaidBalOfOtherFormu__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalOfOtherFormu__c</fullName>
    <formula>OtherRevenueCostID__r.DifferenceOtherCost__c</formula>
    <label>UNPAID BAL OF OTHER-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>