force-app/main/default/objects/OtherVAT__c/fields/UnpaidBalOfOtherVATFormu__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalOfOtherVATFormu__c</fullName>
    <label>UNPAID BAL OF OTHER-VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>