force-app/main/default/objects/OtherVAT__c/fields/UnreceivedBalOfOtherFormu__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalOfOtherFormu__c</fullName>
    <formula>OtherRevenueCostID__r.DifferenceOtherRevenue__c</formula>
    <label>UNRECEIVED BAL OF OTHER-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>