force-app/main/default/objects/OtherVAT__c/fields/UnreceivedBalOfOtherVAT__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalOfOtherVAT__c</fullName>
    <label>UNRECEIVED BAL OF OTHER-VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>